fixed z-index issues on desktop version

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,12 +22,17 @@ $desktop: "only screen and (min-width : 1200px)";
 // All Pages Default
 // =====================
 
+html,body{
+  min-height:100%;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   width: 100%;
   height: 100%;
   color: $chingu-grey;
   overflow-x: hidden; //for hiding menu
+  box-sizing: border-box;
 }
 
 #body {
@@ -57,8 +62,12 @@ a {
 // Header
 // =============
 .header {
+  position: relative;
   padding: em(15);
   z-index: 2;
+    @media #{$desktop} {
+      z-index: auto;
+    }
 }
 .site__name {
   font-family: 'Pacifico', cursive;
@@ -111,7 +120,7 @@ a {
   top: 0;
   right: 0;
   height: 100%;
-  width: 250px;
+  width: 280px;
   z-index: 1;
   background: white;
   visibility: hidden;
@@ -182,7 +191,7 @@ a {
 }
 
 .header__translate {
-  transform: translateX(-250px);
+  transform: translateX(-280px);
   transition: 500ms;
   overflow: hidden;
 }
